Afegeix endpoints inici joc i matar
