# server/src/swagger.json
@@ -59,34 +59,10 @@
         "parameters": [
           {
             "in": "query",
-            "name": "lat1",
+            "name": "id",
             "required": true,
             "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "in": "query",
-            "name": "lon1",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "in": "query",
-            "name": "lat2",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "in": "query",
-            "name": "lon2",
-            "required": true,
-            "schema": {
-              "type": "string"
+              "$ref": "#/components/schemas/ID"
             }
           }
         ],
@@ -97,6 +73,61 @@
               "application/json": {
                 "schema": {
                   "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/objectiu/{id}": {
+      "get": {
+        "operationId": "objectiuQuery",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/ID"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/angle": {
+      "get": {
+        "operationId": "angleQuery",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/ID"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "number",
+                  "format": "float"
                 }
               }
             }
@@ -217,6 +248,67 @@
           }
         }
       }
+    },
+    "/api/create-game": {
+      "post": {
+        "operationId": "createGameMutation",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {}
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/matar": {
+      "post": {
+        "operationId": "matarMutation",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "$ref": "#/components/schemas/ID"
+                  }
+                },
+                "required": [
+                  "id"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -224,7 +316,8 @@
       "Query": {
         "type": "object",
         "required": [
-          "users"
+          "users",
+          "locationInRange"
         ],
         "properties": {
           "users": {
@@ -238,6 +331,13 @@
           },
           "locationInRange": {
             "type": "boolean"
+          },
+          "objectiu": {
+            "$ref": "#/components/schemas/User"
+          },
+          "angle": {
+            "type": "number",
+            "format": "float"
           }
         }
       },
@@ -246,7 +346,8 @@
         "required": [
           "id",
           "name",
-          "email"
+          "email",
+          "winner"
         ],
         "properties": {
           "id": {
@@ -266,13 +367,25 @@
           },
           "longitude": {
             "type": "string"
+          },
+          "alive": {
+            "type": "boolean"
+          },
+          "monedes": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "winner": {
+            "type": "boolean"
           }
         }
       },
       "Mutation": {
         "type": "object",
         "required": [
-          "createUser"
+          "createUser",
+          "createGame",
+          "matar"
         ],
         "properties": {
           "createUser": {
@@ -283,17 +396,12 @@
           },
           "updateLastKnown": {
             "$ref": "#/components/schemas/User"
-          }
-        }
-      },
-      "UserUpdateInput": {
-        "type": "object",
-        "properties": {
-          "latitude": {
-            "type": "string"
           },
-          "longitude": {
-            "type": "string"
+          "createGame": {
+            "type": "boolean"
+          },
+          "matar": {
+            "type": "boolean"
           }
         }
       },
